--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "dev-server": "nodemon index.js",
-    "start": "node build/build.js && node server.js",
+    "start": "npm install && node build/build.js && node server.js",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
