--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "path": "^0.12.7",
     "serve-static": "^1.13.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "shelljs": "^0.7.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
