--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "serve-static": "^1.13.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "shelljs": "^0.7.8"
+    "shelljs": "^0.7.8",
+    "ora": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -49,7 +50,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
+    "ora": "^1.4.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
