--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "shelljs": "^0.7.8",
-    "ora": "^1.4.0"
+    "ora": "^1.4.0",
+    "rimraf": "^2.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -50,14 +51,11 @@
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.4.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.8",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
