--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-router": "^3.0.1",
     "shelljs": "^0.7.8",
     "ora": "^1.4.0",
-    "rimraf": "^2.6.0"
+    "rimraf": "^2.6.0",
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
