--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "shelljs": "^0.7.8",
     "ora": "^1.4.0",
     "rimraf": "^2.6.0",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "extract-text-webpack-plugin": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -46,7 +47,6 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
