--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rimraf": "^2.6.0",
     "webpack": "^3.6.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "eslint-friendly-formatter": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,7 +42,6 @@
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
