--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "webpack": "^3.6.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "webpack-merge": "^4.1.0",
-    "eslint-friendly-formatter": "^3.0.0"
+    "eslint-friendly-formatter": "^3.0.0",
+    "copy-webpack-plugin": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -38,7 +39,6 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
