--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "webpack-merge": "^4.1.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "copy-webpack-plugin": "^4.0.1"
+    "copy-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^2.30.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -50,7 +51,6 @@
     "eslint-plugin-vue": "^4.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "portfinder": "^1.0.13",
