--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "webpack-merge": "^4.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "copy-webpack-plugin": "^4.0.1",
-    "html-webpack-plugin": "^2.30.1"
+    "html-webpack-plugin": "^2.30.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -52,7 +53,6 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
