--- a/package.json
+++ b/package.json
@@ -17,17 +17,7 @@
     "path": "^0.12.7",
     "serve-static": "^1.13.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "shelljs": "^0.7.8",
-    "ora": "^1.4.0",
-    "rimraf": "^2.6.0",
-    "webpack": "^3.6.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "webpack-merge": "^4.1.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "html-webpack-plugin": "^2.30.1",
-    "optimize-css-assets-webpack-plugin": "^3.2.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,9 +31,11 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
@@ -52,7 +44,9 @@
     "eslint-plugin-vue": "^4.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
@@ -64,7 +58,13 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "shelljs": "^0.7.8",
+    "ora": "^1.4.0",
+    "rimraf": "^2.6.0",
+    "webpack": "^3.6.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
