--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "dev-server": "nodemon index.js",
-    "start": "node build/build.js && node server.js",
+    "start": "node server.js",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "express": "^4.16.3",
